--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Bootstrap Style-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
@@ -14,9 +15,45 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <!-- file javascript -->
     <script src="./js/main.js" type="text/javascript" defer></script>
-    <title>Document</title>
+    <title>To Do List</title>
 </head>
 <body>
+    <div class="container text-center">
+        <h1>To do list</h1>
+        <div class="row justify-content-center">
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+            </div>
+            <div class="border-bottom"></div>
+            <div id="app">
+
+                <div class="item_to_do " v-for="(item, index) in toDo">
+                    <div class="item_left">
+                        <i class="fa-solid fa-check fa-lg check_bottom"></i>
+                        <h4 class="item_title">{{toDo[0].text}}</h4>
+                    </div>
+                    <i class="fa-solid fa-trash-can fa-lg delate_botton"></i>
+                </div>
+<!-- 
+                <div class="item_to_do ">
+                    <div class="item_left">
+                        <i class="fa-solid fa-check fa-lg check_bottom"></i>
+                        <h4 class="item_title">Cucinare</h4>
+                    </div>
+                    <i class="fa-solid fa-trash-can fa-lg delate_botton"></i>
+                </div>
+
+                <div class="item_to_do ">
+                    <div class="item_left">
+                        <i class="fa-solid fa-check fa-lg check_bottom"></i>
+                        <h4 class="item_title">Cucinare</h4>
+                    </div>
+                    <i class="fa-solid fa-trash-can fa-lg delate_botton"></i>
+                </div> -->
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
