--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
 
                 <div class="item_to_do " v-for="(item, index) in toDo">
                     <div class="item_left">
-                        <i class="fa-solid fa-check fa-lg check_bottom"></i>
-                        <h4 class="item_title">{{toDo[0].text}}</h4>
+                        <i class="fa-solid fa-check fa-lg check_bottom" @click="checkItem(index)"></i>
+
+                        <h4 class="item_title" v-if="toDo[index].done == false">{{toDo[index].text}}</h4>
+                        <h4 class="item_title text-decoration-line-through" v-else>{{toDo[index].text}}</h4>
+
+                        
                     </div>
                     <i class="fa-solid fa-trash-can fa-lg delate_botton"></i>
                 </div>
