--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
                         
                     </div>
-                    <i class="fa-solid fa-trash-can fa-lg delate_botton"></i>
+                    <i class="fa-solid fa-x fa-lg delate_botton"@click="deleteItems(index)"></i>
+                    
                 </div>
 <!-- 
                 <div class="item_to_do ">
